New endpoint to update faamily member added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port: 8080
 server.servlet.context-path=/suryanarayan-family-tree-api
 
-service.allowed.origins=http://localhost:4200
+service.allowed.origins=http://localhost:4200,http://192.168.0.104:4200
 
 # Family tree dataset
 family.tree.dataset: D:/Projects/portfolio/data/suryanarayan-family-dataset.csv
