--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,26 @@
 server.port: 8080
 server.servlet.context-path=/suryanarayan-family-tree-api
 
-service.allowed.origins=http://localhost:4200,http://192.168.0.104:4200
+service.allowed.origins=http://localhost:4200,http://192.168.0.104:4200,http://192.168.0.108:4200,http://192.168.0.101:4200
 
 # Family tree dataset
 family.tree.dataset: D:/Projects/portfolio/data/suryanarayan-family-dataset.csv
 
 spring.security.user.name=sandeep
 spring.security.user.password=test123
+
+spring.datasource.url=jdbc:mysql://localhost:3306/FAMILY_TREE
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
